--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,9 +7,10 @@ EditorStartupMap=/Game/Map.Map
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 -D3D12TargetedShaderFormats=PCD3D_SM5
-+D3D12TargetedShaderFormats=PCD3D_SM6
++D3D12TargetedShaderFormats=PCD3D_SM5
 -D3D11TargetedShaderFormats=PCD3D_SM5
 +D3D11TargetedShaderFormats=PCD3D_SM5
++VulkanTargetedShaderFormats=SF_VULKAN_SM5
 Compiler=Default
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
@@ -72,7 +73,7 @@ r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 r.Lumen.TraceMeshSDFs=1
 r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=True
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.RayTracing=False
 r.RayTracing.Shadows=False
 r.RayTracing.UseTextureLod=False
@@ -197,8 +198,13 @@ VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationGrayscale.PPM_DefaultCalibrationGrayscale
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
+SpatializationPlugin=
+SourceDataOverridePlugin=
+ReverbPlugin=
+OcclusionPlugin=
+SoundCueCookQualityIndex=-1
 -TargetedRHIs=SF_VULKAN_SM5
-+TargetedRHIs=SF_VULKAN_SM6
++TargetedRHIs=SF_VULKAN_SM5
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
