--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -238,3 +238,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Purifier.InputCharacter.bIsDashing",NewName="/Script/Purifier.InputCharacter.bDashing")
