--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -223,6 +223,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Purifier")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Purifier")
+NearClipPlane=2.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -241,3 +242,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Purifier.InputCharacter.bIsDashing",NewName="/Script/Purifier.InputCharacter.bDashing")
+
